<resources>
    <string name="app_name">Dunya Sesi</string>
    <string name="register_page_title">Register</string>
    <string name="login_page_title">Login</string>
    <string name="login_email_placeholder">Enter Account Email</string>
    <string name="login_password_placeholder">Enter Account Password</string>
    <string name="register_email_placeholder">Enter New Account Email</string>
    <string name="register_username_placeholder">Enter Account Username</string>
    <string name="register_new_password_placeholder">Enter New Password</string>
    <string name="register_confirm_password_placeholder">Confirm New Password</string>
    <string name="forgot_password_email_placeholder">Enter Account Email</string>
    <string name="forgot_password_send_email_button">Send Password</string>
    <string name="forgot_password_back_button">Back</string>
    <string name="register_button_text">Register</string>
    <string name="login_button_text">Login</string>
    <string name="forgot_password_button_text">Forgot Password</string>
    <string name="title_activity_explore">Explore</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="settings_button">settings</string>
    <string name="logout_button">logout</string>
    <string name="update_username_button">update username</string>
    <string name="update_caption_button">update caption</string>
    <string name="update_banner_button">update banner</string>
    <string name="update_email_button">update email</string>
    <string name="update_password_button">update password</string>
    <string name="settings_back_button">back</string>
    <string name="delete_account_button">delete account</string>
    <string name="profile_settings_title">profile settings</string>
    <string name="new_request_button">Requests</string>
    <string name="my_network_title">My Network</string>
    <string name="network_search">Search network ...</string>
    <string name="chat_search">Search chats ...</string>
</resources>
