<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.main.MyNetworkFragment">

    <EditText
        android:id="@+id/userNewPassword"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/network_search"
        android:textSize="20dp"
        android:layout_marginLeft="10dp"/>

    <LinearLayout
        android:id="@+id/searchResultList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical" />


    <TextView
        android:id="@+id/userNetworkTitle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:autoSizeTextType="uniform"
        android:text="@string/my_network_title"
        android:layout_marginLeft="10dp"/>

    <LinearLayout
        android:id="@+id/networkList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="vertical" />

    <Button
        android:id="@+id/newRequestsButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/new_request_button"
        android:background="@color/colorPrimary"
        android:textColor="#ffff"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:textSize="15dp"/>

</LinearLayout>