<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProfileSettingsActivity">

    <TextView
        android:id="@+id/profileSettingsTitle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/profile_settings_title"
        android:textSize="30dp"
        android:layout_marginLeft="10dp"/>

    <EditText
        android:id="@+id/userEmail"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="mmnete"
        android:textSize="30dp"
        android:layout_marginLeft="10dp"/>

    <EditText
        android:id="@+id/userConfirmEmail"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="mmnete"
        android:textSize="30dp"
        android:layout_marginLeft="10dp"/>

    <TextView
        android:id="@+id/userEmailUpdateError"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:textColor="#e4000f"
        android:text="mmnete"
        android:layout_marginLeft="10dp"/>

    <Button
        android:id="@+id/updateEmailButton"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/update_email_button"
        android:background="@color/colorPrimary"
        android:textColor="#ffff"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_gravity="end"
        android:textSize="20dp"/>

    <EditText
        android:id="@+id/userNewPassword"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="mmnete"
        android:textSize="30dp"
        android:layout_marginLeft="10dp"/>

    <EditText
        android:id="@+id/userConfirmNewPassword"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="mmnete"
        android:textSize="30dp"
        android:layout_marginLeft="10dp"/>

    <TextView
        android:id="@+id/userPasswordUpdateError"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:textColor="#e4000f"
        android:text="mmnete"
        android:layout_marginLeft="10dp"/>

    <Button
        android:id="@+id/updatePasswordButton"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/update_password_button"
        android:background="@color/colorPrimary"
        android:textColor="#ffff"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_gravity="end"
        android:textSize="20dp"/>

    <Button
        android:id="@+id/settingsBackButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/settings_back_button"
        android:background="@color/colorPrimary"
        android:textColor="#ffff"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:textSize="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4" />

    <Button
        android:id="@+id/deleteAccountButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/delete_account_button"
        android:background="#e4000f"
        android:textColor="#ffff"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:textSize="20dp"/>


</LinearLayout>